unpackaged/main/default/objects/JSR__c/JSR__c.object-meta.xml
<CustomObject>
    <label>JSR</label>
    <nameField>
        <displayFormat>JSR-{00000000}</displayFormat>
        <label>JSR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JSRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>