unpackaged/main/default/objects/JSR__c/fields/AdequatePhotoProvidedForPMR__c.field-meta.xml
<CustomField>
    <fullName>AdequatePhotoProvidedForPMR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adequate Photos Provided For PMR</label>
    <type>Checkbox</type>
</CustomField>