unpackaged/main/default/objects/JSR__c/fields/All_Cables_Tested__c.field-meta.xml
<CustomField>
    <fullName>All_Cables_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Cables Tested</label>
    <type>Checkbox</type>
</CustomField>