unpackaged/main/default/objects/JSR__c/fields/All_Cables_Tested_Files2__c.field-meta.xml
<CustomField>
    <fullName>All_Cables_Tested_Files2__c</fullName>
    <label>All Cables Tested Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>