unpackaged/main/default/objects/JSR__c/fields/All_Panels_Closed_Files2__c.field-meta.xml
<CustomField>
    <fullName>All_Panels_Closed_Files2__c</fullName>
    <label>All Panels Closed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>