unpackaged/main/default/objects/JSR__c/fields/AllActivityCoordinatedWithCust__c.field-meta.xml
<CustomField>
    <fullName>AllActivityCoordinatedWithCust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Activities Coordinated With Customer</label>
    <type>Checkbox</type>
</CustomField>