unpackaged/main/default/objects/JSR__c/fields/AllowPhotosOfEquipFiles2__c.field-meta.xml
<CustomField>
    <fullName>AllowPhotosOfEquipFiles2__c</fullName>
    <label>Allowed Photos Of Equipment Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>