unpackaged/main/default/objects/JSR__c/fields/AllowPhotosOfEquipFiles__c.field-meta.xml
<CustomField>
    <fullName>AllowPhotosOfEquipFiles__c</fullName>
    <label>Allowed Photos Of Equipment Files</label>
    <type>TextArea</type>
</CustomField>