unpackaged/main/default/objects/JSR__c/fields/AMC_After_Files2__c.field-meta.xml
<CustomField>
    <fullName>AMC_After_Files2__c</fullName>
    <label>AMC After Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>