unpackaged/main/default/objects/JSR__c/fields/AMC_After_Files__c.field-meta.xml
<CustomField>
    <fullName>AMC_After_Files__c</fullName>
    <label>AMC After Files</label>
    <type>TextArea</type>
</CustomField>