unpackaged/main/default/objects/JSR__c/fields/AMC_Before_Files2__c.field-meta.xml
<CustomField>
    <fullName>AMC_Before_Files2__c</fullName>
    <label>AMC Before Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>