unpackaged/main/default/objects/JSR__c/fields/AMC_Before_Files__c.field-meta.xml
<CustomField>
    <fullName>AMC_Before_Files__c</fullName>
    <label>AMC Before Files</label>
    <type>TextArea</type>
</CustomField>