unpackaged/main/default/objects/JSR__c/fields/Antenna_Installed_Files2__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Installed_Files2__c</fullName>
    <label>Antenna Installed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>