unpackaged/main/default/objects/JSR__c/fields/Antenna_Installed_Files__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Installed_Files__c</fullName>
    <label>Antenna Installed Files</label>
    <type>TextArea</type>
</CustomField>