unpackaged/main/default/objects/JSR__c/fields/Any_DC_Cables_Installed__c.field-meta.xml
<CustomField>
    <fullName>Any_DC_Cables_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any DC Cables Installed</label>
    <type>Checkbox</type>
</CustomField>