unpackaged/main/default/objects/JSR__c/fields/Any_Issues_For_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Any_Issues_For_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Issues For Follow Up</label>
    <type>Checkbox</type>
</CustomField>