unpackaged/main/default/objects/JSR__c/fields/AnyCriticalInfrastructureReported__c.field-meta.xml
<CustomField>
    <fullName>AnyCriticalInfrastructureReported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Critical Infrastructure Reported</label>
    <type>Checkbox</type>
</CustomField>