unpackaged/main/default/objects/JSR__c/fields/APN__c.field-meta.xml
<CustomField>
    <fullName>APN__c</fullName>
    <label>APN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fwar4b.apn</fullName>
                <default>true</default>
                <label>fwar4b.apn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>