unpackaged/main/default/objects/JSR__c/fields/Average_Download_Speed__c.field-meta.xml
<CustomField>
    <fullName>Average_Download_Speed__c</fullName>
    <label>Average Download Speed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>