unpackaged/main/default/objects/JSR__c/fields/Average_Upload_Speed__c.field-meta.xml
<CustomField>
    <fullName>Average_Upload_Speed__c</fullName>
    <label>Average Upload Speed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>