unpackaged/main/default/objects/JSR__c/fields/AWNetworkSepBlackBox__c.field-meta.xml
<CustomField>
    <fullName>AWNetworkSepBlackBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AW Network Separate Black Box</label>
    <type>Checkbox</type>
</CustomField>