unpackaged/main/default/objects/JSR__c/fields/AWNWSepBlackBoxFiles2__c.field-meta.xml
<CustomField>
    <fullName>AWNWSepBlackBoxFiles2__c</fullName>
    <label>AW Network Separate Black Box Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>