unpackaged/main/default/objects/JSR__c/fields/AWNWSepBlackBoxFiles__c.field-meta.xml
<CustomField>
    <fullName>AWNWSepBlackBoxFiles__c</fullName>
    <label>AW Network Separate Black Box Files</label>
    <type>TextArea</type>
</CustomField>