unpackaged/main/default/objects/JSR__c/fields/Bearing_Angle_for_Antenna__c.field-meta.xml
<CustomField>
    <fullName>Bearing_Angle_for_Antenna__c</fullName>
    <label>Bearing/Angle for Antenna Install (i.e.,</label>
    <length>32</length>
    <type>Text</type>
</CustomField>