unpackaged/main/default/objects/JSR__c/fields/BER_RFC_Testing_Performed__c.field-meta.xml
<CustomField>
    <fullName>BER_RFC_Testing_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BER/RFC Testing Performed</label>
    <type>Checkbox</type>
</CustomField>