unpackaged/main/default/objects/JSR__c/fields/BlackBoxBeforeAfterFiles2__c.field-meta.xml
<CustomField>
    <fullName>BlackBoxBeforeAfterFiles2__c</fullName>
    <label>Black Box Before After Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>