unpackaged/main/default/objects/JSR__c/fields/BlackBoxBeforeAfterFiles__c.field-meta.xml
<CustomField>
    <fullName>BlackBoxBeforeAfterFiles__c</fullName>
    <label>Black Box Before After Files</label>
    <type>TextArea</type>
</CustomField>