unpackaged/main/default/objects/JSR__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>IF(Country__c = &quot;Canada&quot;,&quot;Business Field Services&quot;,IF(Country__c = &quot;United States&quot;,&quot;USFO&quot;,&quot;Need Country&quot;))</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>