unpackaged/main/default/objects/JSR__c/fields/Cabling_Installed_According_To_MOP__c.field-meta.xml
<CustomField>
    <fullName>Cabling_Installed_According_To_MOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cabling Installed According To MOP</label>
    <type>Checkbox</type>
</CustomField>