unpackaged/main/default/objects/JSR__c/fields/CashDrawersPresentFiles2__c.field-meta.xml
<CustomField>
    <fullName>CashDrawersPresentFiles2__c</fullName>
    <label>Cash Drawers Present Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>