unpackaged/main/default/objects/JSR__c/fields/CashDrawersPresentFiles__c.field-meta.xml
<CustomField>
    <fullName>CashDrawersPresentFiles__c</fullName>
    <label>Cash Drawers Present Files</label>
    <type>TextArea</type>
</CustomField>