unpackaged/main/default/objects/JSR__c/fields/Cat5_Cables_Installed_Files2__c.field-meta.xml
<CustomField>
    <fullName>Cat5_Cables_Installed_Files2__c</fullName>
    <label>Cat5 Cables Installed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>