unpackaged/main/default/objects/JSR__c/fields/Cat5_Cables_Installed_Files__c.field-meta.xml
<CustomField>
    <fullName>Cat5_Cables_Installed_Files__c</fullName>
    <label>Cat5 Cables Installed Files</label>
    <type>TextArea</type>
</CustomField>