unpackaged/main/default/objects/JSR__c/fields/Certify_Was_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Certify_Was_On_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certify Was On Site</label>
    <type>Checkbox</type>
</CustomField>