unpackaged/main/default/objects/JSR__c/fields/Chassis_Backplane_Files__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Backplane_Files__c</fullName>
    <label>Chassis Backplane Files</label>
    <type>TextArea</type>
</CustomField>