unpackaged/main/default/objects/JSR__c/fields/Chassis_Ground_Files2__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Ground_Files2__c</fullName>
    <label>Chassis Ground Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>