unpackaged/main/default/objects/JSR__c/fields/Chassis_Ground_Files__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Ground_Files__c</fullName>
    <label>Chassis Ground Files</label>
    <type>TextArea</type>
</CustomField>