unpackaged/main/default/objects/JSR__c/fields/Chassis_Installed_Files__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Installed_Files__c</fullName>
    <label>Chassis Installed Files</label>
    <type>TextArea</type>
</CustomField>