unpackaged/main/default/objects/JSR__c/fields/ChassisOrOtherInstalled__c.field-meta.xml
<CustomField>
    <fullName>ChassisOrOtherInstalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis or Other Installed</label>
    <type>Checkbox</type>
</CustomField>