unpackaged/main/default/objects/JSR__c/fields/Clean_Site_Files2__c.field-meta.xml
<CustomField>
    <fullName>Clean_Site_Files2__c</fullName>
    <label>Clean Site Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>