unpackaged/main/default/objects/JSR__c/fields/Clean_Site_Files__c.field-meta.xml
<CustomField>
    <fullName>Clean_Site_Files__c</fullName>
    <label>Clean Site Files</label>
    <type>TextArea</type>
</CustomField>