unpackaged/main/default/objects/JSR__c/fields/Client2__c.field-meta.xml
<CustomField>
    <fullName>Client2__c</fullName>
    <label>Client</label>
    <length>80</length>
    <type>Text</type>
</CustomField>