unpackaged/main/default/objects/JSR__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;W POS Cabling</fullName>
            </value>
            <value>
                <fullName>Adva</fullName>
            </value>
            <value>
                <fullName>Akamai</fullName>
            </value>
            <value>
                <fullName>Allstream</fullName>
            </value>
            <value>
                <fullName>Apple FLM</fullName>
            </value>
            <value>
                <fullName>Aviat</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia</fullName>
            </value>
            <value>
                <fullName>Borealis</fullName>
            </value>
            <value>
                <fullName>CBTS</fullName>
            </value>
            <value>
                <fullName>Century Link</fullName>
            </value>
            <value>
                <fullName>Charter Spectrum</fullName>
            </value>
            <value>
                <fullName>Ciena</fullName>
            </value>
            <value>
                <fullName>CN Rail</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox Communications</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>GoCo</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>Hibernia</fullName>
            </value>
            <value>
                <fullName>Infinera</fullName>
            </value>
            <value>
                <fullName>iTel</fullName>
            </value>
            <value>
                <fullName>Masergy</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rogers</fullName>
            </value>
            <value>
                <fullName>Rogers Femtocell</fullName>
            </value>
            <value>
                <fullName>Rogers FLM</fullName>
            </value>
            <value>
                <fullName>Rogers WBI</fullName>
            </value>
            <value>
                <fullName>SaskTel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>