unpackaged/main/default/objects/JSR__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>