unpackaged/main/default/objects/JSR__c/fields/CompCustProvidedSurvey__c.field-meta.xml
<CustomField>
    <fullName>CompCustProvidedSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Customer Provided Survey</label>
    <type>Checkbox</type>
</CustomField>