unpackaged/main/default/objects/JSR__c/fields/Config_Mode__c.field-meta.xml
<CustomField>
    <fullName>Config_Mode__c</fullName>
    <label>Config Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passthrough</fullName>
            </value>
            <value>
                <fullName>DMZ</fullName>
            </value>
            <value>
                <fullName>Simple Nat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>