unpackaged/main/default/objects/JSR__c/fields/Confirm_Wires_Concealed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Wires_Concealed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Wires Concealed</label>
    <type>Checkbox</type>
</CustomField>