unpackaged/main/default/objects/JSR__c/fields/ConfirmBeforeLeavingSite__c.field-meta.xml
<CustomField>
    <fullName>ConfirmBeforeLeavingSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Before Leaving Site</label>
    <type>Checkbox</type>
</CustomField>