unpackaged/main/default/objects/JSR__c/fields/ConsumableItemsOrderedViasat__c.field-meta.xml
<CustomField>
    <fullName>ConsumableItemsOrderedViasat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumable Items Ordered Viasat</label>
    <type>Checkbox</type>
</CustomField>