unpackaged/main/default/objects/JSR__c/fields/Container_Condition_Files2__c.field-meta.xml
<CustomField>
    <fullName>Container_Condition_Files2__c</fullName>
    <label>Container Condition Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>