unpackaged/main/default/objects/JSR__c/fields/Container_Condition_Files__c.field-meta.xml
<CustomField>
    <fullName>Container_Condition_Files__c</fullName>
    <label>Container Condition Files</label>
    <type>TextArea</type>
</CustomField>