unpackaged/main/default/objects/JSR__c/fields/CopperBreakOFibJumpInstall__c.field-meta.xml
<CustomField>
    <fullName>CopperBreakOFibJumpInstall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copper Breakout Fiber Jumpers Installed</label>
    <type>Checkbox</type>
</CustomField>