unpackaged/main/default/objects/JSR__c/fields/Cradle_Point_Demark_Location2__c.field-meta.xml
<CustomField>
    <fullName>Cradle_Point_Demark_Location2__c</fullName>
    <label>Cradle Point Demark Location</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>