unpackaged/main/default/objects/JSR__c/fields/Cradle_Point_Demark_Location__c.field-meta.xml
<CustomField>
    <fullName>Cradle_Point_Demark_Location__c</fullName>
    <label>Cradle Point Demark Location</label>
    <type>TextArea</type>
</CustomField>