unpackaged/main/default/objects/JSR__c/fields/Cradle_Point_Mac__c.field-meta.xml
<CustomField>
    <fullName>Cradle_Point_Mac__c</fullName>
    <label>Cradle Point Mac</label>
    <length>32</length>
    <type>Text</type>
</CustomField>