unpackaged/main/default/objects/JSR__c/fields/Cradle_Point_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Cradle_Point_Serial_Number__c</fullName>
    <label>Cradle Point Serial Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>