unpackaged/main/default/objects/JSR__c/fields/Cradlepoint_Installed_Files2__c.field-meta.xml
<CustomField>
    <fullName>Cradlepoint_Installed_Files2__c</fullName>
    <label>Cradlepoint Installed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>