unpackaged/main/default/objects/JSR__c/fields/Cradlepoint_Installed_Files__c.field-meta.xml
<CustomField>
    <fullName>Cradlepoint_Installed_Files__c</fullName>
    <label>Cradlepoint Installed Files</label>
    <type>TextArea</type>
</CustomField>