unpackaged/main/default/objects/JSR__c/fields/CradlepointExtAntFiles2__c.field-meta.xml
<CustomField>
    <fullName>CradlepointExtAntFiles2__c</fullName>
    <label>Cradlepoint External Antenna Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>