unpackaged/main/default/objects/JSR__c/fields/CradlepointExtAntFiles__c.field-meta.xml
<CustomField>
    <fullName>CradlepointExtAntFiles__c</fullName>
    <label>Cradlepoint External Antenna Files</label>
    <type>TextArea</type>
</CustomField>