unpackaged/main/default/objects/JSR__c/fields/CusContNamePhone__c.field-meta.xml
<CustomField>
    <fullName>CusContNamePhone__c</fullName>
    <label>Customer Contact Name &amp; Phone Number</label>
    <type>TextArea</type>
</CustomField>