unpackaged/main/default/objects/JSR__c/fields/CustNotifiedWorkComplete__c.field-meta.xml
<CustomField>
    <fullName>CustNotifiedWorkComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Notified Work Complete</label>
    <type>Checkbox</type>
</CustomField>