unpackaged/main/default/objects/JSR__c/fields/Customer_Provided_PMR_Form__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_PMR_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Provided PMR Form</label>
    <type>Checkbox</type>
</CustomField>