unpackaged/main/default/objects/JSR__c/fields/Customer_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Address__c</fullName>
    <label>Customer Site Address</label>
    <type>TextArea</type>
</CustomField>