unpackaged/main/default/objects/JSR__c/fields/CustPerformSatisfactSurvey__c.field-meta.xml
<CustomField>
    <fullName>CustPerformSatisfactSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Performed Satisfaction Survey</label>
    <type>Checkbox</type>
</CustomField>