unpackaged/main/default/objects/JSR__c/fields/CustSatisfactSurveyComment2__c.field-meta.xml
<CustomField>
    <fullName>CustSatisfactSurveyComment2__c</fullName>
    <label>Customer Satisfaction Survey Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>