unpackaged/main/default/objects/JSR__c/fields/CustSatisfactSurveyComment__c.field-meta.xml
<CustomField>
    <fullName>CustSatisfactSurveyComment__c</fullName>
    <label>Customer Satisfaction Survey Comment</label>
    <type>TextArea</type>
</CustomField>