unpackaged/main/default/objects/JSR__c/fields/Date_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_Completion__c</fullName>
    <label>Date Completion</label>
    <type>DateTime</type>
</CustomField>