unpackaged/main/default/objects/JSR__c/fields/Dispatch_Closing_Details2__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Closing_Details2__c</fullName>
    <label>Dispatch Closing Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>