unpackaged/main/default/objects/JSR__c/fields/Dispatch_Closing_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Closing_Details__c</fullName>
    <label>Dispatch Closing Details</label>
    <type>TextArea</type>
</CustomField>