unpackaged/main/default/objects/JSR__c/fields/Driver_Of_Failed_Scope__c.field-meta.xml
<CustomField>
    <fullName>Driver_Of_Failed_Scope__c</fullName>
    <label>Driver Of Failed Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTS</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>