unpackaged/main/default/objects/JSR__c/fields/Echo_Policy_Used__c.field-meta.xml
<CustomField>
    <fullName>Echo_Policy_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Echo Policy Used</label>
    <type>Checkbox</type>
</CustomField>