unpackaged/main/default/objects/JSR__c/fields/Email_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Address__c</fullName>
    <label>Email To Address</label>
    <type>TextArea</type>
</CustomField>