unpackaged/main/default/objects/JSR__c/fields/Engaged_PMO_Team__c.field-meta.xml
<CustomField>
    <fullName>Engaged_PMO_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engaged PMO Team</label>
    <type>Checkbox</type>
</CustomField>