unpackaged/main/default/objects/JSR__c/fields/Enter_Into_SparesTracker__c.field-meta.xml
<CustomField>
    <fullName>Enter_Into_SparesTracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enter Into SparesTracker</label>
    <type>Checkbox</type>
</CustomField>