unpackaged/main/default/objects/JSR__c/fields/Entrance_Holes_Drilled_Files2__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Holes_Drilled_Files2__c</fullName>
    <label>Entrance Holes Drilled Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>