unpackaged/main/default/objects/JSR__c/fields/Entrance_Holes_Drilled_Files__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Holes_Drilled_Files__c</fullName>
    <label>Entrance Holes Drilled Files</label>
    <type>TextArea</type>
</CustomField>