unpackaged/main/default/objects/JSR__c/fields/EquipmentInventoryUploadViasat__c.field-meta.xml
<CustomField>
    <fullName>EquipmentInventoryUploadViasat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Inventory Uploaded Viasat</label>
    <type>Checkbox</type>
</CustomField>