unpackaged/main/default/objects/JSR__c/fields/Escort_After_Files2__c.field-meta.xml
<CustomField>
    <fullName>Escort_After_Files2__c</fullName>
    <label>Escort After Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>