unpackaged/main/default/objects/JSR__c/fields/Escort_After_Files__c.field-meta.xml
<CustomField>
    <fullName>Escort_After_Files__c</fullName>
    <label>Escort After Files</label>
    <type>TextArea</type>
</CustomField>