unpackaged/main/default/objects/JSR__c/fields/Escort_Before_Files2__c.field-meta.xml
<CustomField>
    <fullName>Escort_Before_Files2__c</fullName>
    <label>Escort Before Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>