unpackaged/main/default/objects/JSR__c/fields/Escort_Before_Files__c.field-meta.xml
<CustomField>
    <fullName>Escort_Before_Files__c</fullName>
    <label>Escort Before Files</label>
    <type>TextArea</type>
</CustomField>