unpackaged/main/default/objects/JSR__c/fields/Explain_Why_Did_Not_Confirm2__c.field-meta.xml
<CustomField>
    <fullName>Explain_Why_Did_Not_Confirm2__c</fullName>
    <label>Explain Why Did Not Confirm</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>