unpackaged/main/default/objects/JSR__c/fields/Explain_Why_Did_Not_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Explain_Why_Did_Not_Confirm__c</fullName>
    <label>Explain Why Did Not Confirm</label>
    <type>TextArea</type>
</CustomField>