unpackaged/main/default/objects/JSR__c/fields/External_or_Internal__c.field-meta.xml
<CustomField>
    <fullName>External_or_Internal__c</fullName>
    <label>External or Internal Antenna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>