unpackaged/main/default/objects/JSR__c/fields/Femtocell_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Femtocell_Serial_Number__c</fullName>
    <label>Femtocell Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>