unpackaged/main/default/objects/JSR__c/fields/FiberEndFacesPortsInspected__c.field-meta.xml
<CustomField>
    <fullName>FiberEndFacesPortsInspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fiber End Faces Ports Inspected</label>
    <type>Checkbox</type>
</CustomField>