unpackaged/main/default/objects/JSR__c/fields/Hardware_Chassis_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Chassis_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardware Chassis Inspected</label>
    <type>Checkbox</type>
</CustomField>