unpackaged/main/default/objects/JSR__c/fields/HasEquipInstalled__c.field-meta.xml
<CustomField>
    <fullName>HasEquipInstalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Equipment Installed</label>
    <type>Checkbox</type>
</CustomField>