unpackaged/main/default/objects/JSR__c/fields/HDMI_Cabling_Dressed__c.field-meta.xml
<CustomField>
    <fullName>HDMI_Cabling_Dressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HDMI Cabling Dressed</label>
    <type>Checkbox</type>
</CustomField>