unpackaged/main/default/objects/JSR__c/fields/HDMI_Splitter_Installed_Files2__c.field-meta.xml
<CustomField>
    <fullName>HDMI_Splitter_Installed_Files2__c</fullName>
    <label>HDMI Splitter Installed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>