unpackaged/main/default/objects/JSR__c/fields/HDMI_Splitter_Installed_Files__c.field-meta.xml
<CustomField>
    <fullName>HDMI_Splitter_Installed_Files__c</fullName>
    <label>HDMI Splitter Installed Files</label>
    <type>TextArea</type>
</CustomField>