unpackaged/main/default/objects/JSR__c/fields/HDMICablingDressedFiles2__c.field-meta.xml
<CustomField>
    <fullName>HDMICablingDressedFiles2__c</fullName>
    <label>HDMI Cabling Dressed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>