unpackaged/main/default/objects/JSR__c/fields/HDMICablingDressedFiles__c.field-meta.xml
<CustomField>
    <fullName>HDMICablingDressedFiles__c</fullName>
    <label>HDMI Cabling Dressed Files</label>
    <type>TextArea</type>
</CustomField>