unpackaged/main/default/objects/JSR__c/fields/How_Many_Menu_Boards__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Menu_Boards__c</fullName>
    <label>How Many Menu Boards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>