unpackaged/main/default/objects/JSR__c/fields/HowManyCashDrawersPresent__c.field-meta.xml
<CustomField>
    <fullName>HowManyCashDrawersPresent__c</fullName>
    <label>How Many Cash Drawers Present</label>
    <length>64</length>
    <type>Text</type>
</CustomField>