unpackaged/main/default/objects/JSR__c/fields/HowManyRunsCat5e__c.field-meta.xml
<CustomField>
    <fullName>HowManyRunsCat5e__c</fullName>
    <label>How Many Runs Cat5e FT6 Completed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>