unpackaged/main/default/objects/JSR__c/fields/HowManyRunsHDMI__c.field-meta.xml
<CustomField>
    <fullName>HowManyRunsHDMI__c</fullName>
    <label>How Many Runs HDMI</label>
    <length>16</length>
    <type>Text</type>
</CustomField>