unpackaged/main/default/objects/JSR__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI</label>
    <length>32</length>
    <type>Text</type>
</CustomField>