unpackaged/main/default/objects/JSR__c/fields/Incomplete_Scope_Of_Work_Contact__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Scope_Of_Work_Contact__c</fullName>
    <label>Incomplete Scope Of Work Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bimla Nand</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>