unpackaged/main/default/objects/JSR__c/fields/InfoLTSQualityStandard__c.field-meta.xml
<CustomField>
    <fullName>InfoLTSQualityStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information LTS Quality Standard</label>
    <type>Checkbox</type>
</CustomField>