unpackaged/main/default/objects/JSR__c/fields/Infrastructure_Issues_Explanation2__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Issues_Explanation2__c</fullName>
    <label>Infrastructure Issues Explanation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>