unpackaged/main/default/objects/JSR__c/fields/Infrastructure_Issues_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Issues_Explanation__c</fullName>
    <label>Infrastructure Issues Explanation</label>
    <type>TextArea</type>
</CustomField>