unpackaged/main/default/objects/JSR__c/fields/Installation_Location_Room_description__c.field-meta.xml
<CustomField>
    <fullName>Installation_Location_Room_description__c</fullName>
    <label>Installation Location (Room description)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>