unpackaged/main/default/objects/JSR__c/fields/Installed_Part_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Installed_Part_Serial_Numbers__c</fullName>
    <label>Installed Part Serial Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>