unpackaged/main/default/objects/JSR__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>16</length>
    <type>Text</type>
</CustomField>