unpackaged/main/default/objects/JSR__c/fields/Is_There_Drive_Thru__c.field-meta.xml
<CustomField>
    <fullName>Is_There_Drive_Thru__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There Drive-Thru</label>
    <type>Checkbox</type>
</CustomField>