unpackaged/main/default/objects/JSR__c/fields/Is_There_Planet_Switch__c.field-meta.xml
<CustomField>
    <fullName>Is_There_Planet_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There Planet Switch</label>
    <type>Checkbox</type>
</CustomField>