unpackaged/main/default/objects/JSR__c/fields/Issues_Emailed_To_Viasat__c.field-meta.xml
<CustomField>
    <fullName>Issues_Emailed_To_Viasat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues Emailed To Viasat</label>
    <type>Checkbox</type>
</CustomField>