unpackaged/main/default/objects/JSR__c/fields/Issues_Not_Addressed_By_PMR__c.field-meta.xml
<CustomField>
    <fullName>Issues_Not_Addressed_By_PMR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues Not Addressed By PMR</label>
    <type>Checkbox</type>
</CustomField>